Add save method test of unique employee